# qgis-steps-bar

./: .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  README.md  README.rst  pyproject.toml  pyproject.tomp  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: unit_test.md
.github/workflows/: push.yml
qgisstepsbar/: __init__.py  pyproject.toml
qgisstepsbar/qgisstepsbar/: __init__.py
qgisstepsbar/qgisstepsbar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qgisstepsbar/tests/: test_qgisstepsbar.py
